Bug 442959 - Cursor stays as move icon when canceling crop box
Summary: Cursor stays as move icon when canceling crop box
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: 5.0.0-beta1
Platform: Appimage Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-25 23:50 UTC by tomtomtomreportingin
Modified: 2021-09-26 13:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2021-09-25 23:50:38 UTC
SUMMARY
The cursor stays as a move icon instead of switching back to the crop cursor, when escaping/canceling/undoing a crop box. The cursor will only change again when a different action makes it change, such as hovering over the dockers or selecting a new tool.

Not a regression of Krita 5.

STEPS TO REPRODUCE
1. Select Crop tool.
2. Create a crop box.
3. While cursor is over crop box, hit Escape.

OBSERVED RESULT
Cursor is still the move icon.

EXPECTED RESULT
Cursor should switch back to the crop cursor.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.21.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.12.11 (Appimage)
Comment 1 wolthera 2021-09-26 13:39:28 UTC
Git commit 2b48e7dc6ea343f3783a285466e19efc3b812557 by Wolthera van Hövell tot Westerflier.
Committed on 26/09/2021 at 13:38.
Pushed by woltherav into branch 'krita/5.0'.

Fix resetting the crop tool cursor upon stroke cancelation.

M  +13   -8    plugins/tools/tool_crop/kis_tool_crop.cc

https://invent.kde.org/graphics/krita/commit/2b48e7dc6ea343f3783a285466e19efc3b812557
Comment 2 wolthera 2021-09-26 13:39:54 UTC
Git commit bb80ab4991475f7528dffaa646bd2dedf6f68d3f by Wolthera van Hövell, on behalf of Wolthera van Hövell tot Westerflier.
Committed on 26/09/2021 at 13:39.
Pushed by woltherav into branch 'master'.

Fix resetting the crop tool cursor upon stroke cancelation.


(cherry picked from commit 2b48e7dc6ea343f3783a285466e19efc3b812557)

M  +13   -8    plugins/tools/tool_crop/kis_tool_crop.cc

https://invent.kde.org/graphics/krita/commit/bb80ab4991475f7528dffaa646bd2dedf6f68d3f