Fix resetting the crop tool cursor upon stroke cancelation.

BUG:442959